2008-04-15  Mark Ellis <mark@mpellis.org.uk>

	* change in sync-engine dbus api for GetPartnerships

2008-04-13  Jonny Lamb  <jonnylamb@jonnylamb.com>

	* VERSION: Upped version number.
	* configure.ac.in: Upped deps on libsynce and librapi2.

2008-04-13  Jonny Lamb  <jonnylamb@jonnylamb.com>

	* man/synce-trayicon.1: Fixed capitalisation typo.

2008-04-13  Jonny Lamb  <jonnylamb@jonnylamb.com>

	* Removed spec file.

2008-04-03  Mark Ellis <mark@mpellis.org.uk>

	* more fixes to sync-engine partnerships
	* removed some redundant code in odccm-client

2008-03-25  Mark Ellis <mark@mpellis.org.uk>

	* correction to setting dccm in prefs window

2008-03-22  Mark Ellis <mark@mpellis.org.uk>

	* access list of sync item keys correctly

2008-03-20  Mark Ellis <mark@mpellis.org.uk>

	* correct sorting of sync item type keys
	* check for presence of g_hash_table_get_keys()

2008-03-19  Mark Ellis <mark@mpellis.org.uk>

	* create and remove sync-engine partnerships in device info

2008-03-16  Mark Ellis <mark@mpellis.org.uk>

	* retrieve sync_items from sync_engine partnership as g_value boxed
	* remove confusing warning about device not found in
	  wm_device_manager_find_by_name_impl()

2008-03-13  Mark Ellis <mark@mpellis.org.uk>

	* don't try CeRapiInit if rapi_conn is NULL in odccm-client.c
	  and hal-client.c

2008-03-12  Mark Ellis <mark@mpellis.org.uk>

	* connect to session bus, not system, for sync-engine

2008-02-28  Mark Ellis <mark@mpellis.org.uk>

	* report type of rapi errors in get_device_name_via_rapi()
	* get rapi_conn from odccm via rapi_connection_from_name(),
	  fixes WM5 connections
	* initialize GError in partners_setup_view_store_synceng()

2008-02-20  Mark Ellis <mark@mpellis.org.uk>

	* objectify device info dialog
	* add submenu per device for info and explore
	* check for connected devices on start

2008-02-11  Mark Ellis <mark@mpellis.org.uk>

	* initialize dbus pointers to NULL in sync-engine func

2008-02-06  Mark Ellis <mark@mpellis.org.uk>
